[refactor/#8]: .collect() ->  .toList() 교체
 - 바로 list로 반환